--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-redux": "^8.0.2",
-        "redux-thunk": "^2.4.1"
+        "redux-thunk": "^2.4.1",
+        "sass": "^1.54.4"
     },
     "devDependencies": {
         "@types/node": "18.7.3",
